RCMIP5 1.x
===========

* Now use `assertthat` for pre- and post-assertions.

* Vignette updates.

* Bug fixes: file close on loadEnsemble() skip (#106); fractional yearRange (#107); overlapping files (#109)


RCMIP5 1.1
===========

* Much faster thanks to shifting computations from `plyr` and `abind` to `dplyr`.

* New checks for odd edge cases in loadEnsemble().

* Provenance now handles multi-line custom functions correctly.

* Removed support for old `ncdf` from saveNetCDF().

* Many new tests.


RCMIP5 1.0
===========

* First release of the RCMIP5 package.

* More information at https://github.com/JGCRI/RCMIP5.