@@ -7,6 +7,7 @@
 #'
 #' @param x A \code{\link{cmip5data}} object
 #' @param verbose logical. Print info as we go?
+#' @param sortData logical. Sort \code{x} and \code{area} before computing?
 #' @param FUN function. Function to apply across months of year
 #' @param ... Other arguments passed on to \code{FUN}
 #' @return A \code{\link{cmip5data}} object, whose \code{val} field is the monthly
@@ -14,6 +15,8 @@
 #' recording the number of years averaged for each month.
 #' @details The stat function is calculated for all combinations of lon,
 #' lat, and Z (if present).
+#' @note If \code{x} is not in a needed order (for example, \code{FUN} uses
+#' weights in a different order), be sure to specify \code{sortData=TRUE}.
 #' @seealso \code{\link{makeAnnualStat}} \code{\link{makeZStat}} \code{\link{makeGlobalStat}}
 #' @examples
 #' d <- cmip5data(1970:1975)   # sample data
@@ -21,29 +24,32 @@
 #' summary(makeMonthlyStat(d))
 #' summary(makeMonthlyStat(d, FUN=sd))
 #' @export
-makeMonthlyStat <- function(x, verbose=FALSE, FUN=mean, ...) {
+makeMonthlyStat <- function(x, verbose=FALSE, sortData=FALSE, FUN=mean, ...) {
     
     # Sanity checks
     assert_that(class(x)=="cmip5data")
     assert_that(is.null(x$numYears))
     assert_that(x$debug$timeFreqStr=="mon")
     assert_that(is.flag(verbose))
+    assert_that(is.flag(sortData))
     assert_that(is.function(FUN))
     
     # Main computation code
     timer <- system.time({ # time the main computation, below
-        # Put data in consistent order BEFORE overwriting time
-        x$val <- group_by(x$val, lon, lat, Z, time) %>%
-            arrange()
-        
-        monthIndex <- floor((x$val$time %% 1) * 12 + 1)
-        x$val$month <- monthIndex  
         
         # Suppress stupid NOTEs from R CMD CHECK
         lon <- lat <- Z <- time <- month <- value <- `.` <- NULL
         
-        # Put data in consistent order and compute
+        # Put data in consistent order BEFORE overwriting time
+        if(sortData) {
+            if(verbose) cat("Sorting data...\n")    
+            x$val <- group_by(x$val, lon, lat, Z, time) %>%
+            arrange()
+        }
         
+        monthIndex <- floor((x$val$time %% 1) * 12 + 1)
+        x$val$month <- monthIndex  
+                
         # Instead of "summarise(value=FUN(value, ...))", we use the do()
         # call below, because the former doesn't work (as of dplyr 0.3.0.9000):
         # the ellipses cause big problems. This solution thanks to Dennis
