@@ -111,11 +111,11 @@ test_that("makeAnnualStat handles custom function and dots", {
     d$val$year <- floor(d$val$time)
     ans <- aggregate(value~lon+lat+year, data=d$val, FUN=weighted.mean, w=w)
     
-    res1 <- makeAnnualStat(d, verbose=F, FUN=weighted.mean, w)
+    res1 <- makeAnnualStat(d, verbose=F, sortData=F, FUN=weighted.mean, w)
     expect_is(res1, "cmip5data")
     
     myfunc <- function(x, w, ...) weighted.mean(x, w, ...)
-    res2 <- makeAnnualStat(d, verbose=F, FUN=myfunc, w)
+    res2 <- makeAnnualStat(d, verbose=F, sortData=F, FUN=myfunc, w)
     expect_is(res1, "cmip5data")
     
     # Are the result values correct?    
